--- a/SoftwareConfeccao/MainPage.xaml
+++ b/SoftwareConfeccao/MainPage.xaml
@@ -2,29 +2,95 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoftwareConfeccao.MainPage"
-             Shell.NavBarIsVisible = "False">
-      <ContentPage.Content>
+             Shell.NavBarIsVisible="False">
+    <ContentPage.Content>
 
 
-        <StackLayout BackgroundColor="#00008b" Padding="10" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+        <StackLayout BackgroundColor="#00008b"
+                Padding="10"
+                VerticalOptions="FillAndExpand"
+                HorizontalOptions="FillAndExpand">
             <!-- Logo e Nome da Empresa -->
-            <Frame CornerRadius="10" BackgroundColor="#a0afb7" Padding="10" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
-                <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-                    <Image Source="icon.png" HeightRequest="50" WidthRequest="50" HorizontalOptions="Center" VerticalOptions="Center"/>
-                    <Label Text="Nome da Empresa" FontAttributes="Bold" HorizontalOptions="Center"/>
+            <Frame CornerRadius="10"
+                    BackgroundColor="#a0afb7"
+                    Padding="10"
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="Start">
+                <StackLayout HorizontalOptions="Center"
+                        VerticalOptions="Center">
+                    <Image Source="icon.png"
+                            HeightRequest="50"
+                            WidthRequest="50"
+                            HorizontalOptions="Center"
+                            VerticalOptions="Center"/>
+                    <Label Text="Nome da Empresa"
+                            FontAttributes="Bold"
+                            HorizontalOptions="Center"/>
                 </StackLayout>
             </Frame>
 
             <!-- Menu de Botões -->
-            <StackLayout HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" Spacing="20" BackgroundColor="#a0afb7">
-            
-                <Button Text="Cliente" ImageSource="cliente.png" VerticalOptions="Center" Clicked="OnClienteClicked" HorizontalOptions="FillAndExpand" BackgroundColor="#4169e1" HeightRequest="70" WidthRequest="70"/>
-                <Button Text="Fornecedor" ImageSource="entregador.png" VerticalOptions="Center" Clicked="OnFornecedorClicked" HorizontalOptions="FillAndExpand" BackgroundColor="#4169e1" HeightRequest="70" WidthRequest="70"/>
-                <Button Text="Transportadora" ImageSource="transportadora.png" VerticalOptions="Center" Clicked="OnTransportadoraClicked" HorizontalOptions="FillAndExpand" BackgroundColor="#4169e1" HeightRequest="70" WidthRequest="70"/>
-                <Button Text="Matéria prima" ImageSource="linha.png" VerticalOptions="Center" Clicked="OnMateriaPrimaClicked" HorizontalOptions="FillAndExpand" BackgroundColor="#4169e1" HeightRequest="70" WidthRequest="70"/>
-                <Button Text="Produto" ImageSource="camiseta.png" VerticalOptions="Center" Clicked="OnProdutoClicked" HorizontalOptions="FillAndExpand" BackgroundColor="#4169e1" HeightRequest="70" WidthRequest="70"/>
-                <Button Text="Pedidos" ImageSource="pedido.png" VerticalOptions="Center" Clicked="OnPedidosClicked" HorizontalOptions="FillAndExpand" BackgroundColor="#4169e1" HeightRequest="70" WidthRequest="70"/>
-                <Button Text="Estoque" ImageSource="estoque.png" VerticalOptions="Center" Clicked="OnEstoqueClicked" HorizontalOptions="FillAndExpand" BackgroundColor="#4169e1" HeightRequest="70" WidthRequest="70"/>
+            <StackLayout HorizontalOptions="StartAndExpand"
+                    VerticalOptions="CenterAndExpand"
+                    Spacing="20"
+                    BackgroundColor="#a0afb7">
+
+                <Button Text="Cliente"
+                        ImageSource="cliente.png"
+                        VerticalOptions="Center"
+                        Clicked="OnClienteClicked"
+                        HorizontalOptions="FillAndExpand"
+                        BackgroundColor="#4169e1"
+                        HeightRequest="70"
+                        WidthRequest="70"/>
+                <Button Text="Fornecedor"
+                        ImageSource="entregador.png"
+                        VerticalOptions="Center"
+                        Clicked="OnFornecedorClicked"
+                        HorizontalOptions="FillAndExpand"
+                        BackgroundColor="#4169e1"
+                        HeightRequest="70"
+                        WidthRequest="70"/>
+                <Button Text="Transportadora"
+                        ImageSource="transportadora.png"
+                        VerticalOptions="Center"
+                        Clicked="OnTransportadoraClicked"
+                        HorizontalOptions="FillAndExpand"
+                        BackgroundColor="#4169e1"
+                        HeightRequest="70"
+                        WidthRequest="70"/>
+                <Button Text="Matéria prima"
+                        ImageSource="linha.png"
+                        VerticalOptions="Center"
+                        Clicked="OnMateriaPrimaClicked"
+                        HorizontalOptions="FillAndExpand"
+                        BackgroundColor="#4169e1"
+                        HeightRequest="70"
+                        WidthRequest="70"/>
+                <Button Text="Produto"
+                        ImageSource="camiseta.png"
+                        VerticalOptions="Center"
+                        Clicked="OnProdutoClicked"
+                        HorizontalOptions="FillAndExpand"
+                        BackgroundColor="#4169e1"
+                        HeightRequest="70"
+                        WidthRequest="70"/>
+                <Button Text="Pedidos"
+                        ImageSource="pedido.png"
+                        VerticalOptions="Center"
+                        Clicked="OnPedidosClicked"
+                        HorizontalOptions="FillAndExpand"
+                        BackgroundColor="#4169e1"
+                        HeightRequest="70"
+                        WidthRequest="70"/>
+                <Button Text="Estoque"
+                        ImageSource="estoque.png"
+                        VerticalOptions="Center"
+                        Clicked="OnEstoqueClicked"
+                        HorizontalOptions="FillAndExpand"
+                        BackgroundColor="#4169e1"
+                        HeightRequest="70"
+                        WidthRequest="70"/>
             </StackLayout>
         </StackLayout>
 
