--- a/SoftwareConfeccao/Telas/PedidoCadastro.xaml
+++ b/SoftwareConfeccao/Telas/PedidoCadastro.xaml
@@ -3,58 +3,100 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Telas.PedidoCadastro"
              Title="Cadastro de Pedidos"
-             Shell.NavBarIsVisible = "false">
+             Shell.NavBarIsVisible="false">
     <ContentPage.Content>
-    <ScrollView>
-        <StackLayout BackgroundColor="#00008b" Padding="10">
-            <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10"   VerticalOptions="FillAndExpand">
-                <StackLayout>
-                    <Label Text="Cadastro de Fornecedores" FontAttributes="Bold" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
-                </StackLayout>
-            </Frame>
-            <Label Text="Código do Cliente" TextColor="#a0afb7"/>
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
-                <Entry Placeholder="Insira um Código..."  />
-            </Frame>
+        <ScrollView>
+            <StackLayout BackgroundColor="#00008b"
+                    Padding="10">
+                <Frame CornerRadius="10"
+                        BackgroundColor="#6699cc"
+                        Padding="10"
+                        Margin="0,10"
+                        VerticalOptions="FillAndExpand">
+                    <StackLayout>
+                        <Label Text="Cadastro de Fornecedores"
+                                FontAttributes="Bold"
+                                HorizontalOptions="Center"
+                                HorizontalTextAlignment="Center"/>
+                    </StackLayout>
+                </Frame>
+                <Label Text="Código do Cliente"
+                        TextColor="#a0afb7"/>
+                <Frame CornerRadius="5"
+                        BackgroundColor="White"
+                        Padding="5"
+                        Margin="0,5">
+                    <Entry Placeholder="Insira um Código..."/>
+                </Frame>
 
-            <Label Text="Quantidade" TextColor="#a0afb7"/>
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
-                <Entry Placeholder="Insira uma Quantidade..."  />
-            </Frame>
+                <Label Text="Quantidade"
+                        TextColor="#a0afb7"/>
+                <Frame CornerRadius="5"
+                        BackgroundColor="White"
+                        Padding="5"
+                        Margin="0,5">
+                    <Entry Placeholder="Insira uma Quantidade..."/>
+                </Frame>
 
-            <Label Text="Frete" TextColor="#a0afb7"/>
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
-                <Entry Placeholder="Insira um Frete..."  />
-            </Frame>
+                <Label Text="Frete"
+                        TextColor="#a0afb7"/>
+                <Frame CornerRadius="5"
+                        BackgroundColor="White"
+                        Padding="5"
+                        Margin="0,5">
+                    <Entry Placeholder="Insira um Frete..."/>
+                </Frame>
 
-            <Label Text="Prazo" TextColor="#a0afb7"/>
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
-                <Entry Placeholder="Insira um Prazo..."  />
-            </Frame>
+                <Label Text="Prazo"
+                        TextColor="#a0afb7"/>
+                <Frame CornerRadius="5"
+                        BackgroundColor="White"
+                        Padding="5"
+                        Margin="0,5">
+                    <Entry Placeholder="Insira um Prazo..."/>
+                </Frame>
 
-            <Label Text="Produto" TextColor="#a0afb7"/>
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
-                <Entry Placeholder="Insira um Produto..."  />
-            </Frame>
+                <Label Text="Produto"
+                        TextColor="#a0afb7"/>
+                <Frame CornerRadius="5"
+                        BackgroundColor="White"
+                        Padding="5"
+                        Margin="0,5">
+                    <Entry Placeholder="Insira um Produto..."/>
+                </Frame>
 
-            <Label Text="Observação" TextColor="#a0afb7"/>
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
-                <Entry Placeholder="Insira uma Observação..."  />
-            </Frame>
+                <Label Text="Observação"
+                        TextColor="#a0afb7"/>
+                <Frame CornerRadius="5"
+                        BackgroundColor="White"
+                        Padding="5"
+                        Margin="0,5">
+                    <Entry Placeholder="Insira uma Observação..."/>
+                </Frame>
 
-            <Label Text="Código do Pedido" TextColor="#a0afb7"/>
-            <Frame CornerRadius="5" BackgroundColor="White" Padding="5" Margin="0,5">
-                <Label Text="000000000" />
-            </Frame>
+                <Label Text="Código do Pedido"
+                        TextColor="#a0afb7"/>
+                <Frame CornerRadius="5"
+                        BackgroundColor="White"
+                        Padding="5"
+                        Margin="0,5">
+                    <Label Text="000000000"/>
+                </Frame>
 
 
-            <Button Text="Atualizar" BackgroundColor="#6699cc" Margin="0,20,0,0" />
+                <Button Text="Atualizar"
+                        BackgroundColor="#6699cc"
+                        Margin="0,20,0,0"/>
 
-            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" BackgroundColor="#6699cc"/>
+                <Button Text="◀"
+                        HorizontalOptions="Start"
+                        VerticalOptions="EndAndExpand"
+                        Margin="0,10,0,0"
+                        BackgroundColor="#6699cc"/>
 
 
 
-        </StackLayout>
+            </StackLayout>
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
