--- a/SoftwareConfeccao/Telas/TransportadoraCadastro.xaml
+++ b/SoftwareConfeccao/Telas/TransportadoraCadastro.xaml
@@ -4,31 +4,54 @@
              x:Class="Telas.TransportadoraCadastro"
              Title="Cadastro de Transportadora">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="#00008b" Padding="10">
-            <Frame CornerRadius="10" BackgroundColor="#6699cc" Padding="10" Margin="0,10" VerticalOptions="FillAndExpand">
+        <StackLayout BackgroundColor="#00008b"
+                Padding="10">
+            <Frame CornerRadius="10"
+                    BackgroundColor="#6699cc"
+                    Padding="10"
+                    Margin="0,10"
+                    VerticalOptions="FillAndExpand">
                 <StackLayout>
-                    <Label Text="Cadastro de Transportadoras" FontAttributes="Bold" HorizontalOptions="Center"/>
+                    <Label Text="Cadastro de Transportadoras"
+                            FontAttributes="Bold"
+                            HorizontalOptions="Center"/>
                 </StackLayout>
             </Frame>
-            
-            <Label Text="Nome" TextColor="#cfe7ff"/>
-            <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
-                <Entry Placeholder="Insira um nome..." />
+
+            <Label Text="Nome"
+                    TextColor="#cfe7ff"/>
+            <Frame CornerRadius="5"
+                    BackgroundColor="#cfe7ff"
+                    Padding="5">
+                <Entry Placeholder="Insira um nome..."/>
             </Frame>
 
-            <Label Text="Telefone" TextColor="#cfe7ff"/>
-            <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
-                <Entry Placeholder="Insira um telefone..." />
+            <Label Text="Telefone"
+                    TextColor="#cfe7ff"/>
+            <Frame CornerRadius="5"
+                    BackgroundColor="#cfe7ff"
+                    Padding="5">
+                <Entry Placeholder="Insira um telefone..."/>
             </Frame>
 
-            <Label Text="E-Mail" TextColor="#cfe7ff"/>
-            <Frame CornerRadius="5" BackgroundColor="#cfe7ff" Padding="5">
-                <Entry Placeholder="Insira um e-mail..." />
+            <Label Text="E-Mail"
+                    TextColor="#cfe7ff"/>
+            <Frame CornerRadius="5"
+                    BackgroundColor="#cfe7ff"
+                    Padding="5">
+                <Entry Placeholder="Insira um e-mail..."/>
             </Frame>
 
-            <Button Text="Salvar" BackgroundColor="#6699cc" Margin="0,20,0,0" TextColor="Black"/>
+            <Button Text="Salvar"
+                    BackgroundColor="#6699cc"
+                    Margin="0,20,0,0"
+                    TextColor="Black"/>
 
-            <Button Text="◀" HorizontalOptions="Start" VerticalOptions="EndAndExpand" Margin="0,10,0,0" BackgroundColor="#6699cc"/>
+            <Button Text="◀"
+                    HorizontalOptions="Start"
+                    VerticalOptions="EndAndExpand"
+                    Margin="0,10,0,0"
+                    BackgroundColor="#6699cc"/>
 
         </StackLayout>
     </ContentPage.Content>
