--- a/SoftwareConfeccao/Telas/TransportadoraCadastro.xaml
+++ b/SoftwareConfeccao/Telas/TransportadoraCadastro.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Telas.TransportadoraCadastro"
-             Title="Cadastro de Transportadora">
+             Title="Cadastro de Cliente">
     <ContentPage.Content>
         <StackLayout BackgroundColor="#00008b"
                 Padding="10">
@@ -12,18 +12,22 @@
                     Margin="0,10"
                     VerticalOptions="FillAndExpand">
                 <StackLayout>
-                    <Label Text="Cadastro de Transportadoras"
+                    <Label Text="Cadastro de Transportadora"
                             FontAttributes="Bold"
                             HorizontalOptions="Center"/>
                 </StackLayout>
             </Frame>
+            <Label Text="ID:"
+                    TextColor="#cfe7ff"/>
+            <Label x:Name="IdLabelTransportadora"></Label>
 
             <Label Text="Nome"
                     TextColor="#cfe7ff"/>
             <Frame CornerRadius="5"
                     BackgroundColor="#cfe7ff"
                     Padding="5">
-                <Entry Placeholder="Insira um nome..."/>
+                <Entry Placeholder="Insira um nome..."
+                        x:Name="EntryNomeTransportadora"/>
             </Frame>
 
             <Label Text="Telefone"
@@ -31,7 +35,8 @@
             <Frame CornerRadius="5"
                     BackgroundColor="#cfe7ff"
                     Padding="5">
-                <Entry Placeholder="Insira um telefone..."/>
+                <Entry Placeholder="Insira um telefone..."
+                        x:Name="EntryTelefoneTransportadora"/>
             </Frame>
 
             <Label Text="E-Mail"
@@ -39,19 +44,22 @@
             <Frame CornerRadius="5"
                     BackgroundColor="#cfe7ff"
                     Padding="5">
-                <Entry Placeholder="Insira um e-mail..."/>
+                <Entry Placeholder="Insira um e-mail..."
+                        x:Name="EntryEmailTransportadora"/>
             </Frame>
 
             <Button Text="Salvar"
                     BackgroundColor="#6699cc"
                     Margin="0,20,0,0"
-                    TextColor="Black"/>
+                    TextColor="Black"
+                    Clicked="OnSalvarDadosTransportadoraClicked"/>
 
             <Button Text="◀"
                     HorizontalOptions="Start"
                     VerticalOptions="EndAndExpand"
                     Margin="0,10,0,0"
-                    BackgroundColor="#6699cc"/>
+                    BackgroundColor="#6699cc"
+                    Clicked="OnVoltarCadastroTransportadoraClicked"/>
 
         </StackLayout>
     </ContentPage.Content>
