--- a/SoftwareConfeccao/Telas/PedidoCadastro.xaml
+++ b/SoftwareConfeccao/Telas/PedidoCadastro.xaml
@@ -2,8 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Telas.PedidoCadastro"
-             Title="Cadastro de Pedidos"
-             Shell.NavBarIsVisible="false">
+             Title="Cadastro de Pedido">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout BackgroundColor="#00008b"
@@ -14,87 +13,81 @@
                         Margin="0,10"
                         VerticalOptions="FillAndExpand">
                     <StackLayout>
-                        <Label Text="Cadastro de Fornecedores"
+                        <Label Text="Cadastro de Pedidos"
                                 FontAttributes="Bold"
-                                HorizontalOptions="Center"
-                                HorizontalTextAlignment="Center"/>
+                                HorizontalOptions="Center"/>
                     </StackLayout>
                 </Frame>
-                <Label Text="Código do Cliente"
-                        TextColor="#a0afb7"/>
+                <Label Text="ID:"
+                        TextColor="#cfe7ff"/>
+                <Label x:Name="IdLabelPedido"></Label>
+
+                <Label Text="Nome do Item:"
+                        TextColor="#cfe7ff"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="White"
-                        Padding="5"
-                        Margin="0,5">
-                    <Entry Placeholder="Insira um Código..."/>
+                        BackgroundColor="#cfe7ff"
+                        Padding="5">
+                    <Entry Placeholder="Insira um Item..."
+                            x:Name="EntryNomePedido"/>
+                </Frame>
+
+                <Label Text="Custo:"
+                        TextColor="#cfe7ff"/>
+                <Frame CornerRadius="5"
+                        BackgroundColor="#cfe7ff"
+                        Padding="5">
+                    <Entry Placeholder="Insira um Custo..."
+                            x:Name="EntryCustoPedido"/>
                 </Frame>
 
                 <Label Text="Quantidade"
-                        TextColor="#a0afb7"/>
+                        TextColor="#cfe7ff"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="White"
-                        Padding="5"
-                        Margin="0,5">
-                    <Entry Placeholder="Insira uma Quantidade..."/>
+                        BackgroundColor="#cfe7ff"
+                        Padding="5">
+                    <Entry Placeholder="Insira uma quantidade..."
+                            x:Name="EntryQuantidadePedido"/>
                 </Frame>
 
                 <Label Text="Frete"
-                        TextColor="#a0afb7"/>
+                        TextColor="#cfe7ff"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="White"
-                        Padding="5"
-                        Margin="0,5">
-                    <Entry Placeholder="Insira um Frete..."/>
+                        BackgroundColor="#cfe7ff"
+                        Padding="5">
+                    <Entry Placeholder="Insira um Frete..."
+                            x:Name="EntryFretePedido"/>
                 </Frame>
 
-                <Label Text="Prazo"
-                        TextColor="#a0afb7"/>
+                <Label Text="Prazo:"
+                        TextColor="#cfe7ff"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="White"
-                        Padding="5"
-                        Margin="0,5">
-                    <Entry Placeholder="Insira um Prazo..."/>
-                </Frame>
-
-                <Label Text="Produto"
-                        TextColor="#a0afb7"/>
-                <Frame CornerRadius="5"
-                        BackgroundColor="White"
-                        Padding="5"
-                        Margin="0,5">
-                    <Entry Placeholder="Insira um Produto..."/>
+                        BackgroundColor="#cfe7ff"
+                        Padding="5">
+                    <Entry Placeholder="Insira um Prazo"
+                            x:Name="EntryPrazoPedido"/>
                 </Frame>
 
                 <Label Text="Observação"
-                        TextColor="#a0afb7"/>
+                        TextColor="#cfe7ff"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="White"
-                        Padding="5"
-                        Margin="0,5">
-                    <Entry Placeholder="Insira uma Observação..."/>
+                        BackgroundColor="#cfe7ff"
+                        Padding="5">
+                    <Entry Placeholder="Adicione uma Observação (opcional)"
+                            x:Name="EntryObsPedido"/>
                 </Frame>
 
-                <Label Text="Código do Pedido"
-                        TextColor="#a0afb7"/>
-                <Frame CornerRadius="5"
-                        BackgroundColor="White"
-                        Padding="5"
-                        Margin="0,5">
-                    <Label Text="000000000"/>
-                </Frame>
-
-
-                <Button Text="Atualizar"
+                <Button Text="Salvar"
                         BackgroundColor="#6699cc"
-                        Margin="0,20,0,0"/>
+                        Margin="0,20,0,0"
+                        TextColor="Black"
+                        Clicked="OnSalvarDadosPedidoClicked"/>
 
                 <Button Text="◀"
                         HorizontalOptions="Start"
                         VerticalOptions="EndAndExpand"
                         Margin="0,10,0,0"
-                        BackgroundColor="#6699cc"/>
-
-
+                        BackgroundColor="#6699cc"
+                        Clicked="OnVoltarCadastroPedidoClicked"/>
 
             </StackLayout>
         </ScrollView>
