--- a/SoftwareConfeccao/Telas/PedidoTela.xaml
+++ b/SoftwareConfeccao/Telas/PedidoTela.xaml
@@ -2,8 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Telas.PedidoTela"
-             Title="Cadastro de Pedidos"
-             Shell.NavBarIsVisible="false">
+             Title="Lista Pedido">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout BackgroundColor="#00008b"
@@ -23,85 +22,30 @@
                     </StackLayout>
                 </Frame>
 
-                <StackLayout Orientation="Vertical"
-                        HorizontalOptions="FillAndExpand"
-                        Spacing="10">
-                    <Frame BackgroundColor="White"
-                            CornerRadius="5"
-                            Padding="5">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="Pedido 1"
-                                    VerticalOptions="Center"/>
-                            <Button Text="..."
-                                    Grid.Column="1"
-                                    BackgroundColor="#4169e1"/>
-                        </Grid>
-                    </Frame>
-                    <Frame BackgroundColor="White"
-                            CornerRadius="5"
-                            Padding="5">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="Pedido 2"
-                                    VerticalOptions="Center"/>
-                            <Button Text="..."
-                                    Grid.Column="1"
-                                    BackgroundColor="#4169e1"/>
-                        </Grid>
-                    </Frame>
-                    <Frame BackgroundColor="White"
-                            CornerRadius="5"
-                            Padding="5">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="Pedido 3"
-                                    VerticalOptions="Center"/>
-                            <Button Text="..."
-                                    Grid.Column="1"
-                                    BackgroundColor="#4169e1"/>
-                        </Grid>
-                    </Frame>
-                    <Frame BackgroundColor="White"
-                            CornerRadius="5"
-                            Padding="5">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="Pedido 4"
-                                    VerticalOptions="Center"/>
-                            <Button Text="..."
-                                    Grid.Column="1"
-                                    BackgroundColor="#4169e1"/>
-                        </Grid>
-                    </Frame>
-                    <Frame BackgroundColor="White"
-                            CornerRadius="5"
-                            Padding="5">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="Pedido 5"
-                                    VerticalOptions="Center"/>
-                            <Button Text="..."
-                                    Grid.Column="1"
-                                    BackgroundColor="#4169e1"/>
-                        </Grid>
-                    </Frame>
-                </StackLayout>
+                <ListView x:Name="ListaPedidos"
+                          ItemSelected="QuandoSelecionarUmItemNaListaPedido"
+                          HasUnevenRows="True"
+                          HorizontalOptions="Fill"
+                          VerticalOptions="Fill">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <VerticalStackLayout Padding="20"
+                                                     BackgroundColor="#4169e1">
+                                    <HorizontalStackLayout>
+                                        <Label Text="{Binding Nomeitem}"
+                                               FontSize="20"/>
+                                        <Label Text="{Binding Custoitem}"
+                                               FontSize="20"
+                                               Margin="10,0,0,0"/>
+                                    </HorizontalStackLayout>
+                                    <Label Text="{Binding Quantidadepedido}"
+                                           FontSize="20"/>
+                                </VerticalStackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
 
                 <StackLayout Orientation="Horizontal"
                         HorizontalOptions="FillAndExpand"
@@ -109,44 +53,17 @@
                         Padding="10">
                     <Button Text="◀"
                             HorizontalOptions="StartAndExpand"
-                            BackgroundColor="#4169e1"/>
+                            VerticalOptions="End"
+                            BackgroundColor="#4169e1"
+                            Clicked="OnVoltarPedidoClicked"/>
                     <Button Text="➕"
                             HorizontalOptions="EndAndExpand"
-                            BackgroundColor="#4169e1"/>
-                </StackLayout>
-
-
-
-                <!--!FRAME DOS TRÊS PONTOS-->
-                <StackLayout  Padding="10"
-                        VerticalOptions="CenterAndExpand">
-                    <Frame CornerRadius="20"
-                            BackgroundColor="LightBlue"
-                            Padding="20"
-                            HorizontalOptions="CenterAndExpand"
-                            VerticalOptions="CenterAndExpand"
-                            HeightRequest="250"
-                            WidthRequest="250"
-                            IsVisible="False">
-                        <StackLayout HorizontalOptions="Center"
-                                VerticalOptions="Center">
-                            <Button Text="◀"
-                                    HorizontalOptions="Start"
-                                    VerticalOptions="Start"
-                                    WidthRequest="50"
-                                    HeightRequest="50"/>
-                            <Button Text="Visualisar"
-                                    BackgroundColor="LightGray"
-                                    Margin="0,10"/>
-                            <Button Text="Deletar"
-                                    BackgroundColor="LightGray"
-                                    Margin="0,10"/>
-                        </StackLayout>
-                    </Frame>
+                            VerticalOptions="End"
+                            BackgroundColor="#4169e1"
+                            Clicked="OnNovoPedidoClicked"/>
                 </StackLayout>
 
             </StackLayout>
         </ScrollView>
-
     </ContentPage.Content>
 </ContentPage>
