--- a/SoftwareConfeccao/Telas/CadastroClientes.xaml
+++ b/SoftwareConfeccao/Telas/CadastroClientes.xaml
@@ -54,6 +54,12 @@
                     TextColor="Black"
                     Clicked="OnSalvarDadosClienteClicked"/>
 
+                <Button Text="Excluir"
+                        TextColor="Red"
+                        BackgroundColor="Transparent"
+                        Clicked="OnApagarClienteClicked"/>
+
+
             <Button Text="◀"
                     HorizontalOptions="Start"
                     VerticalOptions="EndAndExpand"
