--- a/SoftwareConfeccao/Telas/FornecedoresCadastro.xaml
+++ b/SoftwareConfeccao/Telas/FornecedoresCadastro.xaml
@@ -82,6 +82,11 @@
                         TextColor="Black"
                         Clicked="OnSalvarDadosFornecedorClicked"/>
 
+                <Button Text="Excluir"
+                        TextColor="Red"
+                        BackgroundColor="Transparent"
+                        Clicked="OnApagarFornecedorClicked"/>
+
                 <Button Text="◀"
                         HorizontalOptions="Start"
                         VerticalOptions="EndAndExpand"
